--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axios": "^1.3.5",
     "clipboard": "^2.0.11",
     "d3": "^7.8.0",
-    "echarts": "^5.4.2",
+    "echarts": "^6.0.0",
+    "echarts-wordcloud": "^2.1.0",
     "firebase": "^9.19.1",
     "flag-icons": "^6.6.6",
     "focus-trap": "^7.4.0",
