--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^9.19.1",
     "flag-icons": "^6.6.6",
     "focus-trap": "^7.4.0",
+    "gsap": "^3.14.2",
     "happy-dom": "^9.6.1",
     "mapbox-gl": "^3.0.0",
     "md-editor-v3": "^2.11.2",
